[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hash-utils-ai-mcp"
version = "1.0.0"
description = "MEOK AI Labs — Hashing, UUID, and ID generation tools powered by MEOK AI Labs."
authors = [{name="MEOK AI Labs", email="nicholas@meok.ai"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mcp", "mcp-server", "model-context-protocol", "claude", "ai-tools", "meok-ai-labs", "hashing", "md5", "sha256", "checksum", "cryptographic-hash"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/hash-utils-ai-mcp"
Documentation = "https://meok.ai/docs/hash-utils-ai-mcp"
"Bug Tracker" = "https://github.com/CSOAI-ORG/hash-utils-ai-mcp/issues"
